Fix Text Overflow & Input Always Showing Default

--- a/index.css
+++ b/index.css
@@ -66,7 +66,13 @@ p {
     padding: 0.5rem;
     box-sizing: border-box;
     border-radius: 5px;
+    overflow: hidden;
+}
+#AppliedFilterContainer>span>span>div{
+    width: 100%;
+    height: 100%;
     overflow: scroll;
+    text-wrap: auto;
 }
 
 #MenuContainer input {
